Wed Jan 27 16:34:28 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/sspi.c: fix thread issue with SSPI

Wed Jan 27 16:29:44 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h src/tds/Makefile.am src/tds/ptw32_MCS_lock.c:
	* src/tds/win_mutex.c:
	- implement pthread compatible mutex for windows (partial code from
	  pthread-win32, LGPL 2 too)

Wed Jan 27 13:20:42 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/sspi.c:
	- use Negotiate and provide SPN in order to enable Kerberos support
	  using SSPI

Wed Jan 27 13:14:46 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/connectparams.c src/tds/config.c:
	- set correctly server_host_name from odbc

Wed Jan 27 09:29:57 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/tds/sspi.c:
	- add support for user/password using SSPI

Wed Jan 27 09:07:13 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/sspi.c: remove useless "A" suffix

Tue Jan 26 22:18:16 EST 2010	JK Lowden <jklowden@freetds.org>
	* src/apps/Makefile.am src/dblib/dblib.c
	* src/pool/Makefile.am src/server/Makefile.am
	- link libiconv cf ML 26 Jan 2010

Tue Jan 26 21:25:59 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/winsetup.c: small comments

Tue Jan 26 13:11:37 EST 2010	JK Lowden <jklowden@freetds.org>
	* Nmakefile src/tds/sspi.c win32/config.h
	- build with sspi on Win32, not really working yet

Tue Jan 26 11:25:49 EST 2010	JK Lowden <jklowden@freetds.org>
	* Nmakefile generate header files for CVS checkout

Tue Jan 26 14:41:18 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/winsetup.c: avoid silly buffer overflow

Tue Jan 26 12:20:56 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/tds.h src/tds/Makefile.am src/tds/login.c:
	* src/tds/sspi.c:
	- add experimental support for SSPI (not enabled by default)

Tue Jan 26 12:09:58 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>