@@ -1,3 +1,6 @@
+Wed Jan 27 16:37:25 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/dblib.c: fix format error which could cause core
+
 Wed Jan 27 16:34:28 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/sspi.c: fix thread issue with SSPI
 
@@ -2233,4 +2236,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2966 2010-01-27 15:35:18 freddy77 Exp $
+$Id: ChangeLog,v 1.2967 2010-01-27 15:39:00 freddy77 Exp $
